prodMetadata/src/objects/Contact_related_to_Focus__c.object
<CustomObject>
    <description>junction object for many-to-many relationship between Contacts and Focus Areas</description>
    <fields>
        <fullName>Related_Contact__c</fullName>
        <description>The Contact related to the Focus Area</description>
        <inlineHelpText>The Contact related to the Focus Area</inlineHelpText>
        <label>Related Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipLabel>Focus Areas related to this Contact</relationshipLabel>
        <relationshipName>Contact_rel_to_Focus</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Related_Focus_Area__c</fullName>
        <description>The Focus Area related to the Contact</description>
        <inlineHelpText>The Focus Area related to the Contact</inlineHelpText>
        <label>Related Focus Area</label>
        <lookupFilter>
            <active>true</active>
            <filterItems>
                <field>Focus_Area__c.Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <isOptional>true</isOptional>
        </lookupFilter>
        <referenceTo>Focus_Area__c</referenceTo>
        <relationshipLabel>Contacts related to this Focus Area</relationshipLabel>
        <relationshipName>Focus_related_to_Contact</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>Role__c</fullName>
        <label>Role</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Key Ally</fullName>
                </value>
                <value>
                    <fullName>Supportive</fullName>
                </value>
                <value>
                    <fullName>Opposed</fullName>
                </value>
                <value>
                    <fullName>Target</fullName>
                </value>
                <value>
                    <fullName>Other</fullName>
                </value>
                <value>
                    <fullName>Key Staffer</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <label>Contact related to Focus Area</label>
    <nameField>
        <displayFormat>Cn-Foc-{00000}</displayFormat>
        <label>Contact-Focus ID</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Contacts related to Focus Areas</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>